<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="240dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="datetime"
        android:text="@string/movie_year"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txtResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtMovieName"
        android:layout_width="244dp"
        android:layout_height="74dp"
        android:layout_marginBottom="37dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_name"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnFindMyMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear"
        tools:ignore="LabelFor"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnFindMyMovie"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="169dp"
        android:layout_height="0dp"
        android:layout_marginBottom="379dp"
        android:shadowColor="#AAAAAA"
        android:text="@string/find_my_movie"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMovieName"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#4E4E4E"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>